# alo

./: .gitignore  CMakeLists.txt
Performance/: CMakeLists.txt  ClusterSizeAnalysis.cxx  ClusterSizeAnalysis.h  MIDClusterSizeWorkflow.cxx
PerformanceMC/: CMakeLists.txt  MIDPerformanceMCWorkflow.cxx  PerformanceMC.cxx  PerformanceMC.h
alireaders/: CMakeLists.txt  DigitMaker.cxx  DigitMaker.h  TrackRefReader.cxx  TrackRefReader.h
aliroot/r23/dataformatconverter/: CMakeLists.txt  ConvertDE.cxx  ConvertDE.h
aliroot/r23/mid/: CMakeLists.txt
aliroot/r23/mid/dataformatconverter/: CMakeLists.txt  DataformatConverter.cxx  DataformatConverter.h
aliroot/r23/mid/esdconverter/: CMakeLists.txt  ESDToMID.cxx  ESDToMID.h  README.md  mid-ali-to-alo-esd.cxx  mid-merge-alo-esd.cxx
aliroot/r23/mid/ocdbconverter/: CMakeLists.txt  README.md  mid-ali-to-alo-ocdb.cxx
aliroot/r23/mid/rawconverter/: CMakeLists.txt  README.md  RawToMID.cxx  RawToMID.h  mid-ali-to-alo-raw.cxx  mid-merge-alo-raw.cxx
aliroot/r23/mid/trackrefsconverter/: README.md  TrackRefsToMID.cxx  mid-convert-trackrefs.cxx
aliroot/r23/trackrefsconverter/: CMakeLists.txt  TrackRefsToMID.cxx  mid-convert-trackrefs.cxx
cmake/: FindO2.cmake
dataformats/mid/: ColumnData.h  Event.h  Hit.h  RawData.h  Track.h  TrackMC.h  TrackRefs.h
o2/mid/: CMakeLists.txt
o2/mid/clusterSize/: CMakeLists.txt  ClusterSize.cxx  ClusterSize.h  ClusterSizeAnalysis.cxx  ClusterSizeAnalysis.h  mid-clustersize-analysis.cxx  mid-clustersize.cxx
o2/mid/converters/: CMakeLists.txt  DataformatConverter.cxx  DataformatConverter.h
o2/mid/fireProbability/: CMakeLists.txt  FireProbability.cxx  FireProbability.h  FireProbabilityAnalysis.cxx  FireProbabilityAnalysis.h  README.md  mid-fireprobability-analysis.cxx  mid-fireprobability.cxx
o2/mid/raw/: CMakeLists.txt  README.md  mid-alo-to-o2-raw.cxx  mid-check-o2-raw.cxx
o2/mid/readers/: BoostReader.h  BoostReaderDevice.cxx  BoostReaderDevice.h  CMakeLists.txt
o2/mid/recocheckers/: CMakeLists.txt  CheckReco.cxx  CheckReco.h  README.md  mid-reco-checker.cxx
o2/mid/tracksComparison/: CMakeLists.txt  CompareTracks.cxx  CompareTracks.h  README.md  mid-compare-tracks.cxx
utilities/mid/: BoostReader.cxx  BoostReader.h  CMakeLists.txt
