add_library(MIDConverterUtility SHARED DataFormatConverter.cxx DataFormatConverter.h)
target_include_directories(MIDConverterUtility PUBLIC ${CMAKE_CURRENT_SOURCE_DIR})
target_link_libraries(MIDConverterUtility PUBLIC AliRoot::MUONbase MIDDataFormat)
install(TARGETS MIDConverterUtility LIBRARY DESTINATION lib)